trek stopgap

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -50,3 +50,24 @@ p.personal {
 .hidden {
     display: none;
 }
+
+a.button {
+	background: #9ACD32;
+	padding: 5px;
+	margin: 0px;
+	border-radius: 10px;
+	-moz-border-radius: 10px;
+	border: solid black 2px;
+	font-size: 20px;
+	color: black;
+	text-decoration: none;
+}
+
+a.button:active {
+	border: solid black 1px;
+	background: #9AFF32;
+}
+
+div.date {
+	font-weight: bold;
+}
